--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -29,7 +29,7 @@
             android:layout_width="130dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:text="@string/Kanallar" />
+            android:text="@string/Popüler" />
 
         <Button
             android:id="@+id/categorykategorilerbutton"
