--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -30,7 +30,7 @@
             android:id="@+id/Favkanallarbutton"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:text="@string/Kanallar" />
+            android:text="@string/Popüler" />
 
         <Button
             android:id="@+id/Favkategorilerbutton"
