--- a/app/src/main/res/layout/activity_radio.xml
+++ b/app/src/main/res/layout/activity_radio.xml
@@ -26,7 +26,7 @@
             android:id="@+id/radiokanallarbutton"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:text="@string/Kanallar" />
+            android:text="@string/Popüler" />
 
         <Button
             android:id="@+id/radiokategorilerbutton"
