Buttons are activated.(Part-2)

--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -25,7 +25,7 @@
         android:id="@+id/linearLayout8">
 
         <Button
-            android:id="@+id/Favkanallarbutton"
+            android:id="@+id/Favpopulerbutton"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
 
