--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,8 @@
     <color name="username4">#58dc00</color>
     <color name="username5">#287b00</color>
     <color name="username6">#a8f07a</color>
-    <color name="username7">#4ae8c4</color>
-    <color name="username8">#3b88eb</color>
+    <color name="username7">#86a2ca</color>
+    <color name="username8">#d9e0e8</color>
     <color name="username9">#3824aa</color>
     <color name="username10">#a700ff</color>
     <color name="username11">#d300e7</color>
