--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainActivityfull"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/username8"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -20,13 +22,13 @@
         android:src="@drawable/ic_alarm" />
 
     <LinearLayout
+        android:id="@+id/mLayout"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/mainalarmbutton"
-        android:orientation="horizontal"
-        android:id="@+id/mLayout">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/mainpopulerbutton"
@@ -49,21 +51,19 @@
             android:text="@string/Favoriler" />
 
 
-
     </LinearLayout>
-
-
 
 
     <ListView
 
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView"
+        android:layout_above="@+id/linearLayout3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/mLayout"
-        android:layout_above="@+id/linearLayout3">
+        android:background="@color/username8">
 
     </ListView>
 
@@ -75,31 +75,50 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:background="@color/username8"
         android:orientation="horizontal"
         android:visibility="visible">
 
-        <ImageButton
-            android:id="@+id/notify_me"
-            style="@android:style/Widget.Material.Light.ImageButton"
-            android:layout_width="115dp"
-            android:layout_height="110dp"
-            android:backgroundTint="?attr/colorControlActivated"
-            android:src="@mipmap/mainwidget"></ImageButton>
 
-        <ImageButton
-            android:id="@+id/mainplaybutton"
-            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
-            android:layout_width="115dp"
-            android:layout_height="110dp"
-            android:src="@drawable/ic_play"></ImageButton>
+        <!--Album image for the song currently playing.-->
+        <ImageView
+            android:id="@+id/music_playerlogo"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:background="@color/username8"
+            android:src="@drawable/music_playerlogo"
+            tools:ignore="ContentDescription" />
 
-        <ImageButton
-            android:id="@+id/mainstopbutton"
-            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
-            android:layout_width="115dp"
-            android:layout_height="110dp"
-            android:src="@drawable/ic_pause" />
+        <!--Previous button-->
+        <ImageView
+            android:id="@+id/mainPrev_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/ic_previous"
+            tools:ignore="ContentDescription" />
 
+        <!--Play button-->
+        <ImageView
+            android:id="@+id/mainpp_btn"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:src="@mipmap/ic_play"
+            tools:ignore="ContentDescription" />
+
+
+        <!--Next button-->
+        <ImageView
+            android:id="@+id/mainNext_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/ic_play_next"
+            tools:ignore="ContentDescription" />
 
     </LinearLayout>
 
@@ -110,6 +129,7 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/mainalarmbutton"
         android:layout_toRightOf="@+id/mainalarmbutton"
+        android:background="@color/username8"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Search" />
