--- a/app/src/main/res/layout/item_action.xml
+++ b/app/src/main/res/layout/item_action.xml
@@ -1,3 +1,4 @@
+<!-- Chat için yazışma olduğunda yazıyor bildirimi-->
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
