--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Bu layout müzik baloncuğu widgetı içindir-->
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -51,6 +52,7 @@
 
             <!--Album image for the song currently playing.-->
             <ImageView
+                android:id="@+id/music_player"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/music_player"
@@ -75,6 +77,7 @@
                 android:layout_marginLeft="10dp"
                 android:src="@mipmap/ic_play"
                 tools:ignore="ContentDescription"/>
+
 
             <!--Next button-->
             <ImageView
