--- a/app/src/main/res/layout/kanal_layout.xml
+++ b/app/src/main/res/layout/kanal_layout.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="false"
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    >
 
 
     <ImageButton
@@ -16,7 +21,11 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        />
 
     <TextView
         android:id="@+id/textHeader"
@@ -29,7 +38,11 @@
         android:layout_alignTop="@+id/imageKanal"
         android:layout_toRightOf="@+id/imageKanal"
         android:layout_toEndOf="@+id/imageKanal"
-        android:layout_above="@+id/textDescription" />
+        android:layout_above="@+id/textDescription"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        />
 
     <TextView
         android:id="@+id/textDescription"
@@ -39,9 +52,13 @@
         android:layout_alignLeft="@+id/textHeader"
         android:layout_alignStart="@+id/textHeader"
         android:text="TextView"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        />
 
-    <ImageButton
+    <!--<ImageButton
         android:id="@+id/imageFav"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -51,7 +68,7 @@
         android:layout_alignTop="@+id/textHeader"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-
+-->
 
 
 
