--- a/app/src/main/res/layout/kanal_layout.xml
+++ b/app/src/main/res/layout/kanal_layout.xml
@@ -13,50 +13,48 @@
 
     <ImageButton
         android:id="@+id/imageKanal"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="34dp"
         android:layout_marginStart="34dp"
         android:layout_marginTop="15dp"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:clickable="false"
-        />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/textHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="62dp"
-        android:layout_marginStart="62dp"
         android:text="TextView"
         android:textSize="15sp"
-        android:layout_alignTop="@+id/imageKanal"
-        android:layout_toRightOf="@+id/imageKanal"
-        android:layout_toEndOf="@+id/imageKanal"
-        android:layout_above="@+id/textDescription"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        />
+        android:layout_marginTop="14dp"
+        android:layout_alignTop="@+id/imageKanal"
+        android:layout_toRightOf="@+id/imageKanal"
+        android:layout_toEndOf="@+id/imageKanal"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp" />
 
     <TextView
         android:id="@+id/textDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageKanal"
-        android:layout_alignLeft="@+id/textHeader"
-        android:layout_alignStart="@+id/textHeader"
         android:text="TextView"
         android:textSize="12sp"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        />
+        android:layout_marginBottom="33dp"
+        android:layout_alignBottom="@+id/imageKanal"
+        android:layout_alignLeft="@+id/textHeader"
+        android:layout_alignStart="@+id/textHeader" />
 
     <!--<ImageButton
         android:id="@+id/imageFav"
