--- a/app/src/main/res/layout/kanal_layout.xml
+++ b/app/src/main/res/layout/kanal_layout.xml
@@ -11,7 +11,7 @@
     >
 
 
-    <ImageButton
+    <!--<ImageButton
         android:id="@+id/imageKanal"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -24,7 +24,16 @@
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        />-->
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imageKanal"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@mipmap/ic_launcher"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"/>
 
     <TextView
         android:id="@+id/textHeader"
