--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -3,7 +3,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.internetradio.bt.fragments.OneFragment">
+    tools:context="com.internetradio.bt.fragments.PopulerFragment">
 
     <ListView
 
