--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.internetradio.bt.proje.RegisterActivity">
+    android:background="#f0f9f8"
+    android:id="@+id/activity_register"
+    >
 
     <LinearLayout
         android:layout_centerInParent="true"
