--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/exit"
-        android:title="Çıkış Yap"
-        app:showAsAction="always">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/chatOut"
+        android:title="LogOut" />
+    <item android:id="@+id/exit"
+        android:title="Çıkış Yap" />
 
-    </item>
 </menu>
+
+<!--
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/file"
+        android:title="file" >
+        <!- "file" submenu ->
+<menu>
+    <item android:id="@+id/chatOut"
+        android:title="LogOut" />
+    <item android:id="@+id/exit"
+        android:title="Çıkış Yap" />
+</menu>
+    </item>
+    </menu>-->
