--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/chatOut"
-        android:title="LogOut" />
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/yenile"
+        android:title="Yenile" />
+    <item
+        android:id="@+id/chatOut"
+        android:title="LogOut"
+        android:visible="false" />
     <item android:id="@+id/exit"
         android:title="Çıkış Yap" />
 
