--- a/app/src/main/res/layout/fragment_favori.xml
+++ b/app/src/main/res/layout/fragment_favori.xml
@@ -6,12 +6,9 @@
     tools:context="com.internetradio.bt.fragments.CategoryFragment"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/two"
-        android:textSize="40dp"
-        android:textStyle="bold" />
+    <ListView
+        android:id="@+id/listViewFav"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </RelativeLayout>
