--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,11 +16,11 @@
 
         <EditText
             android:id="@+id/registerUserName"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:hint="Kullanıcı Adı" />
+            android:layout_marginTop="10dp"
+            android:hint="Kullanıcı e-mail" />
 
         <EditText
             android:inputType="textPassword"
