--- a/app/src/main/res/layout/fragment_populer.xml
+++ b/app/src/main/res/layout/fragment_populer.xml
@@ -11,7 +11,9 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/altRadyoLinear"
         android:clickable="false"
+        android:layout_below="@+id/tabs"
         android:descendantFocusability="blocksDescendants"
         android:focusable="false"
         android:focusableInTouchMode="false"
