--- a/app/src/main/res/layout/left_item_layout.xml
+++ b/app/src/main/res/layout/left_item_layout.xml
@@ -23,14 +23,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/txtMessageLeft"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,7 +43,8 @@
                     android:id="@+id/txtTimeLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="10sp" />
             </LinearLayout>
         </LinearLayout>
 
