--- a/app/src/main/res/layout/right_item_layout.xml
+++ b/app/src/main/res/layout/right_item_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
-        app:cardBackgroundColor="#b2ff59"
+        app:cardBackgroundColor="#ff7241"
         app:cardCornerRadius="20sp">
 
         <LinearLayout
@@ -21,20 +21,21 @@
             android:padding="10dp">
 
             <TextView
-                android:textColor="#eefffc"
                 android:id="@+id/txtUserRight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textColor="#eefffc"
+                android:textSize="12sp" />
 
             <TextView
-                android:textColor="#eefffc"
                 android:id="@+id/txtMessageRight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textSize="24sp" />
+                android:textColor="#eefffc"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,11 +44,12 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:textColor="#eefffc"
                     android:id="@+id/txtTimeRight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="#eefffc"
+                    android:textSize="10sp" />
             </LinearLayout>
         </LinearLayout>
 
